deployment-ingress.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: spring-boot-app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: spring-boot-app
  name: deployment-spring-boot-app
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: spring-boot-app
  replicas: 5
  template:
    metadata:
      labels:
        app.kubernetes.io/name: spring-boot-app
    spec:
      containers:
      - image: gurd1t/spring-boot-app:latest
        imagePullPolicy: Always
        name: spring-boot-app
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  namespace: spring-boot-app
  name: service-spring-boot-app
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  type: NodePort
  selector:
    app.kubernetes.io/name: spring-boot-app
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: spring-boot-app
  name: ingress-spring-boot-app
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: service-spring-boot-app
              port:
                number: 80
